--- a/prak2/prak208.html
+++ b/prak2/prak208.html
@@ -25,7 +25,7 @@
         <img src="photo/shinchan.png" width="250" height="250">
       </td>
       <td align="center">
-        <a href="latihan1.html"><img src="photo/conan.png" width="250" height="250"></a>
+        <a href="prak201.html"><img src="photo/conan.png" width="250" height="250"></a>
       </td>
     </center>
     </table>
